//
//  LoginViewModel.swift
//  G_B_Shop
//
//  Created by emil kurbanov on 31.01.2022.
//

import UIKit

struct LoginViewModel {
    let shopLogo: UIImage = UIImage(named: "GBShopLogo")!
    let loginLabel: String = "Логин:"
    let loginTextFieldPlaceholder: String = "Введите Логин"
    let passwordLabel: String = "Пароль:"
    let passwordTextFieldPlaceholder: String = "Введите Пароль"
    let loginButtonLabel: String = "Войти"
    let registrationButtonLabel: String = "Зарегистрироваться"
    let descriptionAppLabel: String = "Online Shop"
}
